# mpt2

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  build_run.sh  cmake_install.cmake  make_coverage.sh  run.sh  run_cppcheck.sh  testa_pilha  testa_pilha.cpp  tests.cpp
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/MP_2/: index-sort-f.html  index-sort-l.html  index.html  testa_pilha.cpp.func-sort-c.html  testa_pilha.cpp.func.html  testa_pilha.cpp.gcov.html
include/: globals.h  pilha.h  pilha_lista.h  pilha_vetor.h
pilha_lista/: CMakeLists.txt  Makefile  cmake_install.cmake  pilha_lista.c  pilha_lista.cpp
pilha_vetor/: CMakeLists.txt  Makefile  cmake_install.cmake  pilha_vetor.c  pilha_vetor.cpp
whattotest/: CMakeLists.txt  Makefile  cmake_install.cmake
